--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
+
 <head>
 
 	<title>Oriakhi Collins | Mobile Application Developer | oriakhicolls01@gmail.com.com</title>
@@ -8,169 +9,227 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
+	<link rel="stylesheet" type="text/css"
+		href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
 
 </head>
+
 <body>
 
-<div id="doc2" class="yui-t7">
-	<div id="inner">
-	
-		<div id="hd">
-			<div class="yui-gc">
-				<div class="yui-u first">
-					<h1>Oriakhi Collins</h1>
-					<h2>Mobile Applications Developer</h2>
-				</div>
+	<div id="doc2" class="yui-t7">
+		<div id="inner">
 
-				<div class="yui-u">
-					<div class="contact-info">
-						<!-- <h3><a id="pdf" href="#">Download PDF</a></h3> -->
-						<h3><a href="oriakhicolls01@gmail.com">name@yourdomain.com</a></h3>
-						<h3>+234 8163 509 379</h3>
-					</div><!--// .contact-info -->
-				</div>
-			</div><!--// .yui-gc -->
-		</div><!--// hd -->
+			<div id="hd">
+				<div class="yui-gc">
+					<div class="yui-u first">
+						<h1>Oriakhi Collins</h1>
+						<h2>Mobile Applications Developer</h2>
+					</div>
 
-		<div id="bd">
-			<div id="yui-main">
-				<div class="yui-b">
+					<div class="yui-u">
+						<div class="contact-info">
+							<!-- <h3><a id="pdf" href="#">Download PDF</a></h3> -->
+							<h3><a href="https://github.com/Collins01-max">CollinsO.com</a></h3>
+							<h3>+234 8163 509 379</h3>
+							<!-- <h3> <a href="https://github.com/Collins01-max"></a>Github.com/collins01-max</h3>
+							<h3> <a href=""></a>LinkedIn</h3>
+							<h3> <a href=""></a>Twitter</h3> -->
 
-					<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Profile</h2>
 						</div>
-						<div class="yui-u">
-							<p class="enlarge">
-								I am an Avid software developer with 2+ years of experience in building scalable, maintainable and high quality softwares. I love working in an enviroment, where there’s always something to give, and something to learn. I  have held programming courses that has helped several individual come into the Tech-Space, and has given them the ability to build scalable softwares, which has landed them in getting different jobs. I  major in building mobile applications, using the MVVM architecture model. I always want to meet with new people, and learn new skills. I turn ideas into softwares.
-							</p>
-						</div>
-					</div><!--// .yui-gf -->
+						<!--// .contact-info -->
+					</div>
+				</div>
+				<!--// .yui-gc -->
+			</div>
+			<!--// hd -->
 
-					<!-- <div class="yui-gf">
+			<div id="bd">
+				<div id="yui-main">
+					<div class="yui-b">
+
+						<div class="yui-gf">
+							<div class="yui-u first">
+								<h2>Profile</h2>
+							</div>
+							<div class="yui-u">
+								<p class="enlarge">
+									I am an Avid software developer with 2+ years of experience in building scalable,
+									maintainable and high quality softwares. I love working in an enviroment, where
+									there’s always something to give, and something to learn. I have held programming
+									courses that has helped several individual come into the Tech-Space, and has given
+									them the ability to build scalable softwares, which has landed them in getting
+									different jobs. I major in building mobile applications, using the MVVM architecture
+									model. I always want to meet with new people, and learn new skills. I turn ideas
+									into softwares.
+								</p>
+							</div>
+						</div>
+						<!--// .yui-gf -->
+
+						<!-- <div class="yui-gf">
 						<div class="yui-u first">
 							<h2>Skills</h2>
 						</div>
 						<div class="yui-u"> -->
 
-								<!-- <div class="talent">
+						<!-- <div class="talent">
 									<h2>Web Design</h2>
 									<p>Assertively exploit wireless initiatives rather than synergistic core competencies.	</p>
 								</div> -->
 
-								<!-- <div class="talent">
+						<!-- <div class="talent">
 									<h2>Interface Design</h2>
 									<p>Credibly streamline mission-critical value with multifunctional functionalities.	 </p>
 								</div> -->
 
-								<!-- <div class="talent">
+						<!-- <div class="talent">
 									<h2>Project Direction</h2>
 									<p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
 								</div> -->
 						<!-- </div>
 					</div>// .yui-gf -->
 
-					<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Technical</h2>
-						</div>
-						<div class="yui-u">
-							<ul class="talent">
-								<li>Flutter</li>
-								<li>Dart</li>
-								<li class="last">Node.JS</li>
-							</ul>
-
-							<ul class="talent">
-								<li>Git</li>
-								<li>Typescript</li>
-								<li class="last">CVS / Subversion</li>
-							</ul>
-
-							<ul class="talent">
-								<li>MongoDB</li>
-								<li>Firebase</li>
-								<!-- <li class="last">Linux</li> -->
-							</ul>
-						</div>
-					</div><!--// .yui-gf-->
-
-					<div class="yui-gf">
-	
-						<div class="yui-u first">
-							<h2>Experience</h2>
-						</div><!--// .yui-u -->
-
-						<div class="yui-u">
-
-							<div class="job">
-								<h2>CloudMall Africa</h2>
-								<h3>Senior Interface Designer</h3>
-								<!-- <h4>2005-2007</h4> -->
-								<p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence. </p>
+						<div class="yui-gf">
+							<div class="yui-u first">
+								<h2>Technical</h2>
 							</div>
+							<div class="yui-u">
+								<ul class="talent">
+									<li>Flutter</li>
+									<li>Dart</li>
+									<li class="last">Node.JS</li>
+								</ul>
 
-							<div class="job">
-								<h2>JALS.</h2>
-								<h3>Senior Interface Designer</h3>
-								<!-- <h4>2005-2007</h4> -->
-								<p>Progressively reconceptualize multifunctional "outside the box" thinking through inexpensive methods of empowerment. Compellingly morph extensive niche markets with mission-critical ideas. Phosfluorescently deliver bricks-and-clicks strategic theme areas rather than scalable benefits. </p>
+								<ul class="talent">
+									<li>Git</li>
+									<li>Typescript</li>
+									<li class="last">CVS / Subversion</li>
+								</ul>
+
+								<ul class="talent">
+									<li>MongoDB</li>
+									<li>Firebase</li>
+									<!-- <li class="last">Linux</li> -->
+								</ul>
 							</div>
-
-							<div class="job">
-								<h2>Rellay</h2>
-								<h3>Principal and Creative Lead</h3>
-								<!-- <h4>2004-2005</h4> -->
-								<p>Intrinsicly transform flexible manufactured products without excellent intellectual capital. Energistically evisculate orthogonal architectures through covalent action items. Assertively incentivize sticky platforms without synergistic materials. </p>
-							</div>
-
-
-							<div class="job last">
-								<h2>International Business Machines (IBM)</h2>
-								<h3>Lead Web Designer</h3>
-								<!-- <h4>2001-2004</h4> -->
-								<p>Globally re-engineer cross-media schemas through viral methods of empowerment. Proactively grow long-term high-impact human capital and highly efficient innovation. Intrinsicly iterate excellent e-tailers with timely e-markets.</p>
-							</div>
-
-						</div><!--// .yui-u -->
-					</div><!--// .yui-gf -->
-
-
-					<div class="yui-gf last">
-						<div class="yui-u first">
-							<h2>Education</h2>
 						</div>
-						<div class="yui-u">
-							<h2> University of Benin, Edo State Nigeria</h2>
-							<h3>Computer Science&mdash; <strong>4.0 GPA</strong> </h3>
+						<!--// .yui-gf-->
+
+						<div class="yui-gf">
+
+							<div class="yui-u first">
+								<h2>Experience</h2>
+							</div>
+							<!--// .yui-u -->
+
+							<div class="yui-u">
+
+								<div class="job">
+									<h2>CloudMall Africa</h2>
+									<h3>Mobbile App Developer</h3>
+									<!-- <h4>2005-2007</h4> -->
+									<p>Intrinsicly enable optimal core competencies through corporate relationships.
+										Phosfluorescently implement worldwide vortals and client-focused imperatives.
+										Conveniently initiate virtual paradigms and top-line convergence. </p>
+								</div>
+
+								<div class="job">
+									<h2>JALS.</h2>
+									<h3>Mobile App Developer</h3>
+									<!-- <h4>2005-2007</h4> -->
+									<p>Progressively reconceptualize multifunctional "outside the box" thinking through
+										inexpensive methods of empowerment. Compellingly morph extensive niche markets
+										with mission-critical ideas. Phosfluorescently deliver bricks-and-clicks
+										strategic theme areas rather than scalable benefits. </p>
+								</div>
+
+								<div class="job">
+									<h2>Rellay</h2>
+									<h3>Backend Intern</h3>
+									<!-- <h4>2004-2005</h4> -->
+									<p>Intrinsicly transform flexible manufactured products without excellent
+										intellectual capital. Energistically evisculate orthogonal architectures through
+										covalent action items. Assertively incentivize sticky platforms without
+										synergistic materials. </p>
+								</div>
+
+
+								<div class="job last">
+									<h2>International Business Machines (IBM)</h2>
+									<h3>Lead Web Designer</h3>
+									<!-- <h4>2001-2004</h4> -->
+									<p>Globally re-engineer cross-media schemas through viral methods of empowerment.
+										Proactively grow long-term high-impact human capital and highly efficient
+										innovation. Intrinsicly iterate excellent e-tailers with timely e-markets.</p>
+								</div>
+
+							</div>
+							<!--// .yui-u -->
 						</div>
-					</div><!--// .yui-gf -->
+						<!--// .yui-gf -->
 
 
-				</div><!--// .yui-b -->
-			</div><!--// yui-main -->
-		</div><!--// bd -->
-
-		<div id="ft">
-			<p>Oriakhi Collins &mdash; <a href="mailto:name@yourdomain.com">collinsO.com</a> &mdash; +234 8163 509 379</p>
-		</div><!--// footer -->
-		<!-- Form Part of the Resume -->
-		<form>
-			<label for="fname">Email:</label><br>
-			<input type="text" id="fname" name="fname"><br>
-			<label for="lname">Phone Number:</label><br>
-			<input type="text" id="lname" name="lname">
-			<button type="submit" value="Submit">Submit</button>
-		  </form>
-		 
-	</div><!-- // inner -->
+						<div class="yui-gf last">
+							<div class="yui-u first">
+								<h2>Education</h2>
+							</div>
+							<div class="yui-u">
+								<h2> University of Benin, Edo State, Nigeria</h2>
+								<h3>Computer Science </h3>
+							</div>
+						</div>
+						<!--// .yui-gf -->
 
 
-</div><!--// doc -->
+					</div>
+					<!--// .yui-b -->
+				</div>
+				<!--// yui-main -->
+			</div>
+			<!--// bd -->
+
+			<div id="ft">
+				<p>Oriakhi Collins &mdash; <a href="mailto:name@yourdomain.com">collinsO.com</a> &mdash; +234 8163 509
+					379</p>
+			</div>
+			<!--// footer -->
+			<!-- <script>
+				let x=document.forms['myForm']['fname'].value;
+				if (x=="") {
+					alert("Name must be filled out");
+					return false;
+				}
+			</script> -->
+			<div class="form-body">
+				<h3 class="form-heading">Contact Me</h3>
+				<form class="contact-form" ,name="myForm" action="/functions.js" onsubmit="return validateForm()"
+					method="post">
+					<div>
+						<label for="fname">Email:</label><br>
+						<input type="email"  name="Email"><br>
+					</div>
+
+					<div>
+						<label for="lname">Message:</label><br>
+					
+						<textarea id="lname" name="Message" cols="30" rows="10"></textarea>
+					</div>
+
+				</form>
+
+			</div>
+			<div class="submit-button">
+				<input type="button" value="Submit">
+			</div>
+
+		</div><!-- // inner -->
+
+
+	</div>
+	<!--// doc -->
 
 
 </body>
-</html>
 
+</html>
